welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: not found: type blue
getCouleurCorps():blue
                  ^